# JAKA_PI_Humanoid

./: .gitignore  README.md
deploy/: Khan_mini_config.yaml  Khan_mini_mujoco.py  Khan_mini_simplified.xml  policy_loco.pt  policy_moxingwu.pt
deploy/mimic/: __init__.py  config_loader.py  fsm_mimic.py  mimic_simulator.py
project/: pyproject.toml  setup.py
project/config/: extension.toml
project/jaka_rl_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
project/jaka_rl_lab/assets/: __init__.py
project/jaka_rl_lab/assets/jaka/: __init__.py  jaka.py
project/jaka_rl_lab/assets/jaka/Khan_mini_simplified/: Khan_mini_simplified.usd
project/jaka_rl_lab/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py
project/jaka_rl_lab/tasks/locomotion/envs/Khan_mini_27dof/: __init__.py  data.txt  velocity_env_cfg.py
project/jaka_rl_lab/tasks/locomotion/mdp/: __init__.py  events.py  homie_rl_env.py  joint_action_mixed.py  observations.py  rewards.py  rlenv.py
project/jaka_rl_lab/tasks/mimic/agents/: rsl_rl_ppo_cfg.py
project/jaka_rl_lab/tasks/mimic/envs/Khan_mini_27dof/dance/: __init__.py  tracking_env_cfg.py
project/jaka_rl_lab/tasks/mimic/mdp/: __init__.py  commands.py  joint_action_mixed.py  observations.py  rewards.py  rlenv.py  terminations.py
rsl_rl/rsl_rl/runners/: amp_on_policy_runner.py
rsl_rl/rsl_rl/utils/: motion_loader.py
scripts/: list_envs.py
scripts/mimic/: csv_to_amp.py  csv_to_npz.py  replay_npz.py
scripts/rsl_rl/: play.py  train.py
